samples/_failures_safe/1761086084_a7a90c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_74ca3069.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_74ca3069.c:177:17: error: expected expression at end of input
  177 |                 dist[v] = dist[minIndex] +
      |                 ^~~~
./samples/SAFE/__tmp_74ca3069.c:177:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_74ca3069.c:177:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_74ca3069.c:177:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_74ca3069.c:177:17: error: expected declaration or statement at end of input
